fixed bug with user photo not showing in menu

--- a/src/components/Layout/Menu/Menu.module.scss
+++ b/src/components/Layout/Menu/Menu.module.scss
@@ -41,7 +41,7 @@
       img {
         height: 100%;
         cursor: pointer;
-        object-fit: contain;
+        object-fit: cover;
         border-radius: 50%;
       }
 
